Fixed and tested login / Changed routes because of incompatibility
