# service/api/api-handler.go
@@ -14,6 +14,12 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.PUT("/users/{username}", rt.setMyUserName)
 	rt.router.POST("/users/{username}/photo", rt.setMyPhoto)
 
+	// Group routes
+	rt.router.POST("/groups", rt.createGroup)
+	rt.router.POST("/groups/:group_id", rt.updateGroupName)
+	rt.router.POST("/groups/:group_id/photo", rt.updateGroupPhoto)
+	rt.router.POST("/groups/:group_id/leave", rt.leaveGroup)
+
 	// Conversation routes
 	rt.router.GET("/conversations/:conversationId/messages", rt.getConversationMessages)
 	rt.router.GET("/users/{username}/conversations", rt.getUserConversations)
@@ -26,12 +32,6 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.POST("/conversations/:conversationId/messages", rt.sendMessage)
 	rt.router.DELETE("/conversations/:conversationId/messages/:messageId", rt.deleteMessage)
 	rt.router.POST("/conversations/:conversationId/messages/:messageId", rt.forwardMessage)
-
-	// Group routes
-	rt.router.POST("/conversations/groups", rt.createGroup)
-	rt.router.POST("/conversations/groups/:group_id", rt.updateGroupName)
-	rt.router.POST("/conversations/groups/:group_id/photo", rt.updateGroupPhoto)
-	rt.router.POST("/conversations/groups/:group_id/leave", rt.leaveGroup)
 
 	// Register routes
 	// rt.router.GET("/", rt.getHelloWorld)
